# astfri

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.Md
cmake/modules/: FindClang.cmake  FindLLVM.cmake  FindLibClang.cmake  FindLibClangTooling.cmake
examples/: CMakeLists.txt  cpp_frontend.cpp  main.cpp  main_manual_structure.cpp  manual_structure.cpp
examples/input/: addtion.cpp  debug.cpp  math.cpp
libastfri/: AstNode.h  AstNode.hpp  AstTypes.hpp  CMakeLists.txt  main.cpp
libastfri-cpp/: CMakeLists.txt  ClangManagement.cpp  ClangManagement.hpp  ClangTools.cpp  ClangTools.hpp  ClangVisitor.cpp  ClangVisitor.hpp  ClangVisitorDecl.cpp  ClangVisitorExpr.cpp  ClangVisitorStmt.cpp  clang_management.cpp  clang_management.hpp  clang_tools.cpp  clang_tools.hpp  clang_visitor.cpp  clang_visitor.hpp  clang_visitor_decl.cpp  clang_visitor_expr.cpp  clang_visitor_stmt.cpp  test.cpp  test.hpp
libastfri-output/: CMakeLists.txt  CodeVisitor.cpp  CodeVisitor.hpp  PseudocodeVisitor.cpp  PseudocodeVisitor.hpp  StreamWriter.cpp  StreamWriter.hpp
libastfri-output/formatters/: PlainTextFormatter.cpp  PlainTextFormatter.hpp
libastfri-output/visitors/: CodeVisitor.cpp  CodeVisitor.hpp  PseudocodeVisitor.cpp  PseudocodeVisitor.hpp
libastfri-output/writers/: StreamWriter.cpp  StreamWriter.hpp
libastfri/factories/: DeclarationFactory.cpp  DeclarationFactory.hpp  ExpressionFactory.cpp  ExpressionFactory.hpp  FunctionFactory.cpp  FunctionFactory.hpp  StatementFactory.cpp  StatementFactory.hpp  TypeFactory.cpp  TypeFactory.hpp
libastfri/structures/: Declaration.cpp  Declaration.hpp  Expression.cpp  Expression.hpp  Function.hpp  Statement.cpp  Statement.hpp  Type.cpp  Type.hpp  Variable.hpp  def.hpp
libastfri/utils/: Helper.cpp  Helper.hpp  OutputFormatter.cpp  OutputFormatter.hpp  OutputVisitor.hpp  OutputWriter.hpp
playground/: main.cpp
scripts/: build.sh
